--- a/src/app/components/grid/grid.component.scss
+++ b/src/app/components/grid/grid.component.scss
@@ -6,5 +6,5 @@
 
 .mat-mdc-row:hover .mat-mdc-cell {
     border-color: currentColor;
-    background-color:darkgrey;
+    background-color:aqua;
 }
